--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,7 @@ subprojects {
         implementation('org.springframework.boot:spring-boot-starter-web:2.3.0.BUILD-SNAPSHOT')
         implementation('org.springframework.boot:spring-boot-starter-data-jpa')
         implementation('org.springframework.boot:spring-boot-starter-security')
+        implementation('org.modelmapper:modelmapper:2.3.8')
 
 
         compileOnly "org.projectlombok:lombok:${lombokVersion}"
