--- a/client-management/src/main/resources/application.properties
+++ b/client-management/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.datasource.username=user
 spring.datasource.password=pass
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
+security.ignored=/**
