--- a/build.gradle
+++ b/build.gradle
@@ -42,7 +42,8 @@ subprojects {
         implementation('org.springframework.boot:spring-boot-starter-data-jpa')
         implementation('org.springframework.boot:spring-boot-starter-security')
         implementation('org.modelmapper:modelmapper:2.3.8')
-
+        implementation("com.google.guava:guava:29.0-jre")
+        implementation('mysql:mysql-connector-java')
 
         compileOnly "org.projectlombok:lombok:${lombokVersion}"
         annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
